// Copyright 2022 Namespace Labs Inc; All rights reserved.
// Licensed under the EARLY ACCESS SOFTWARE LICENSE AGREEMENT
// available at http://github.com/namespacelabs/foundation

syntax = "proto3";

package foundation.runtime.kubernetes.kubetool;

option go_package = "namespacelabs.dev/foundation/runtime/kubernetes/kubetool";

message KubernetesEnv {
    string namespace = 1;
}